infra/db.tf
#generate a password
resource "random_password" "db_password" {
  length  = 16
  special = true
}

#Create a secret container in AWS Secrets Manager.
resource "aws_secretsmanager_secret" "db_credentials" {
  name = "${local.name_prefix}-db-credentials"

  tags = {
    Name = "${local.name_prefix}-db-secret"
  }
}


#will put actual secret value inside secret manager
resource "aws_secretsmanager_secret_version" "db_credentials" {
  secret_id = aws_secretsmanager_secret.db_credentials.id

  secret_string = jsonencode({
    username = var.db_username
    password = random_password.db_password.result
  })
}

#db subnet group
resource "aws_db_subnet_group" "this" {
  name       = "${local.name_prefix}-db-subnet-group"
  subnet_ids = aws_subnet.private_db[*].id

  tags = {
    Name = "${local.name_prefix}-db-subnet-group"
  }
}

#RDS PostgreSQL instance
resource "aws_db_instance" "postgres" {
  identifier            = "${local.name_prefix}-postgres"
  engine                = "postgres"
  engine_version        = "16.3"
  instance_class        = var.db_instance_class
  allocated_storage     = 20
  max_allocated_storage = 100
  storage_type          = "gp3"

  db_name  = var.db_name
  username = var.db_username
  password = random_password.db_password.result
  port     = var.db_port

  vpc_security_group_ids = [aws_security_group.db.id]
  db_subnet_group_name   = aws_db_subnet_group.this.name

  multi_az            = false
  publicly_accessible = false
  skip_final_snapshot = true
  deletion_protection = false

  backup_retention_period  = 7
  backup_window            = "02:00-03:00"
  copy_tags_to_snapshot    = true
  delete_automated_backups = true

  tags = {
    Name = "${local.name_prefix}-postgres"
  }
}
